--- a/source/css/modules/_section-proces.scss
+++ b/source/css/modules/_section-proces.scss
@@ -179,7 +179,8 @@
 			width:280px;
 			border-radius: 0 560px 560px 0;
 			margin-left: 280px;
-			background:darken(#F7EEE4,5);
+			// background:darken(#F7EEE4,5);
+			border-right:5px solid #8A6845;
 			//
 			height:560px;
 			top: -40px;
