--- a/source/partials/components/_03-services-section.erb
+++ b/source/partials/components/_03-services-section.erb
@@ -7,8 +7,8 @@
 			</div>
 			<div class="uslugi-container group">
 					<div class="uslugi-box group">
-						<div class="uslugi-box__headline">
-								<h4>1. Tworzę</h4>
+						<div class="uslugi-box__headline" data-number='1'>
+								<h4>Tworzę</h4>
 						</div>		
 						<div class="uslugi-box__body">
 							<ul class="list--uslugi group">
@@ -33,9 +33,10 @@
 							</ul>	
 						</div>
 					</div>
-					<div class="uslugi-box group">	
-							<div class="uslugi-box__headline">
-									<h4>2. By pomóc Ci</h4>
+
+					<div class="uslugi-box l-float l-float-first group">	
+							<div class="uslugi-box__headline" data-number='2'>
+									<h4 >By pomóc Ci</h4>
 							</div>	
 							<div class="uslugi-box__body">	
 								<ul class="list">
@@ -51,9 +52,9 @@
 							</div>
 						
 					</div>
-					<div class="uslugi-box group">
-						<div class="uslugi-box__headline">
-								<h4>3. Bo wiem jak</h4>
+					<div class="uslugi-box l-float group">
+						<div class="uslugi-box__headline" data-number='3'>
+								<h4 >Bo wiem jak</h4>
 						</div>	
 						<div class="uslugi-box__body">	
 							<ul class="list">
