--- a/source/css/_config.scss
+++ b/source/css/_config.scss
@@ -44,7 +44,7 @@ $bp3 							: em(640);
 
 $bp4 							: em(860);  
 $bp5 							: em(1281); 
-$bp5b 							: em(1024); 
+$bp5b 							: em(1024); //1024
 $bp6 							: em(1440); 
 
 
