--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,6 +1,6 @@
 ---
-title:
-opis: 
+title: Milush - web copywriting
+opis: Pisanie tekstów na strony internetowe dla firm, agencji i web designerów, web copywriting, hasła reklamowe, newsletter, oferty sprzedażowe
 ---
 
 <%= partial 'partials/components/header' %>
