--- a/source/partials/components/_02-education-section.erb
+++ b/source/partials/components/_02-education-section.erb
@@ -1,20 +1,22 @@
 <section id="section-education" class="section section-education">
-	<div class="ct">
+	
 		<div class="section-title">
+			<div class="ct">
 				<h3>Po co Ci copywriter?</h3>
 				<span>czyli</span>
 				<p>Dlaczego na stronach www najważniejsza jest treść?</p>
+			</div>	
 		</div>
-
+	<div class="ct">
 		<ul class="education-list">
 			<li class="education-list-row">
 				<div class="education-item ">
 					<h4 class="spr-bef spr-slowa">Słowa sprzedają</h4>
-					<p>Ludzie z reguły nie odwiedzają stron internetowych aby podziwiać ich wygląd. Nie skupiają się też na technologii.Elementy te są oczywiście bardzo ważne.. ale&nbsp;Twoi potencjalni klienci odwiedzają strony z&nbsp;powodu treści. Design przyciąga uwagę, ale&nbsp;to&nbsp;słowa sprzedają.</p>
+					<p>Ludzie z reguły nie odwiedzają stron internetowych aby podziwiać ich wygląd. Nie skupiają się też na technologii. Elementy te są oczywiście bardzo ważne... ale&nbsp;Twoi potencjalni klienci odwiedzają strony z&nbsp;powodu treści. Design przyciąga uwagę, ale&nbsp;to&nbsp;słowa sprzedają.</p>
 				</div>
 				<div class="education-item">
 					<h4 class="spr-bef spr-osobowosc">Twój biznes ma osobowość</h4>
-					<p>Zbyt wiele firm stara sie ukryć swoją osobowość aby wyglądać na bardziej profesjonalne. Ich przekaz staje się jednak suchy i nudny. Słowa również mogą mieć osobowość. Bądź o krok przed konkurencją - komunikuj się z ludźmi, nie z robotami.</p>
+					<p>Zbyt wiele firm stara sie ukryć swoją osobowość, aby wyglądać na bardziej profesjonalne. Ich przekaz staje się jednak suchy i nudny. Słowa również mogą mieć osobowość. Bądź o krok przed konkurencją - komunikuj się z ludźmi, nie z robotami.</p>
 				</div>
 			</li>	
 			<li class="education-list-row">
