--- a/source/partials/components/_03-services-section.erb
+++ b/source/partials/components/_03-services-section.erb
@@ -1,11 +1,15 @@
 <section  id="section-services" class="section section-services">
-	<div class="ct">
-			<div class="section-title">
+	
+			<div class="section-title triangle-down">
+				<div class="ct">
 					<h3>Usługi</h3>
 					<span>czyli</span>
 					<p>W czym tak naprawdę mogę Ci pomóc?</p>
+				</div>	
 			</div>
+	<div class="ct">		
 			<div class="uslugi-container group">
+				<div class="uslugi-box-ct">
 					<div class="uslugi-box group">
 						<div class="uslugi-box__headline" data-number='1'>
 								<h4>Tworzę</h4>
@@ -33,8 +37,10 @@
 							</ul>	
 						</div>
 					</div>
-
-					<div class="uslugi-box l-float l-float-first group">	
+				</div>	
+				<!-- <div class="uslugi-box-group group"> -->
+				<div class="uslugi-box-ct highlighted">
+					<div class="uslugi-box  group">	
 							<div class="uslugi-box__headline" data-number='2'>
 									<h4 >By pomóc Ci</h4>
 							</div>	
@@ -52,7 +58,9 @@
 							</div>
 						
 					</div>
-					<div class="uslugi-box l-float group">
+				</div>	
+				<div class="uslugi-box-ct">
+					<div class="uslugi-box  group">
 						<div class="uslugi-box__headline" data-number='3'>
 								<h4 >Bo wiem jak</h4>
 						</div>	
@@ -67,6 +75,8 @@
 							</ul>
 						</div>	
 					</div>
+				</div>	
+				<!-- </div>	 -->
 			</div>
 	</div>	
 </section>
