--- a/source/partials/components/_05-services-proces.erb
+++ b/source/partials/components/_05-services-proces.erb
@@ -1,10 +1,14 @@
 <section id="section-proces" class="section-proces">	
-	<div class="ct">
-		<div class="section-title">
-				<h3>Proces</h3>
-				<span>czyli</span>
-				<p>Jak wygląda współpraca ze mną?</p>
-		</div>
+	
+	<div class="section-title triangle-down">
+		<div class="ct">
+			<h3>Proces</h3>
+			<span>czyli</span>
+			<p>Jak wygląda współpraca ze mną?</p>
+		</div>	
+	</div>
+
+	<div class="ct">	
 		<div class="section-body">
 			<div class="tabs-wrap tabs-wrap--proces" data-effeckt-type='scale'>
 			
@@ -17,7 +21,7 @@
 				    <div class="tabs-container tabs-container--proces">				     
 					      <div id="tab-proces-1" class="tab-content tab-content--proces">
 					        <h4>1. Pytam</h4>
-					        <p>Na poczatek poprosze cie o wypelnienie ankiety. Z niej dowiem sie wiecej o Twoim zleceniu i oczekiwaniach.</p>
+					        <p>Na początek poproszę Cię o wypełnienie ankiety. Z niej dowiem się więcej o Twoim zleceniu i oczekiwaniach.</p>
 					      </div>
 					      <div id="tab-proces-2" class="tab-content tab-content--proces">
 						    <h4>2. Proponuję</h4>
@@ -33,7 +37,7 @@
 					      </div>		      
 					      <div id="tab-proces-5" class="tab-content tab-content--proces">
 					      	<h4>5. Gotowe</h4>
-					        <p>W dniu oddania otrzymasz ode mnie gotowy tekst, a ja od Ciebie zaplate. Na tekst udzielam 7-dniowej gwarancji, tzn. jeali w tym czasie poprosisz o poprawke, dokonam jej bez dodatkowych oplat. W cenie otrzymujesz zatem tekst + 2 korekty. Jesli w ciagu 7 dni nie zglosisz uwag bedzie to oznaczac akceptacje ostatecznej wersji tekstu.</p>
+					        <p>W dniu oddania otrzymasz ode mnie gotowy tekst, a ja od Ciebie zapłatę. Na tekst udzielam 7-dniowej gwarancji, tzn. jeśli w tym czasie poprosisz o poprawkę, dokonam jej bez dodatkowych opłat. W cenie otrzymujesz zatem tekst + 2 korekty. Jeśli w ciągu 7 dni nie zgłosisz uwag będzie to oznaczać akceptację ostatecznej wersji tekstu.</p>
 					      </div>		
 				    </div>
 			 </div>
