--- a/source/css/modules/_footer.scss
+++ b/source/css/modules/_footer.scss
@@ -1,8 +1,10 @@
 .footer {
 	text-align: center;
 	padding:.5em 0;
-	background:#FAF7F2;
-	box-shadow:inset 0 2px 5px rgba(#000,.5);
+	// background:#FAF7F2;
+	background:rgba(#000,.9);
+	background:darken(#8F6B47,20);
+	// box-shadow:inset 0 2px 5px rgba(#000,.5);
 }
 
 .footer-body {
