--- a/source/css/modules/_section-kontakt.scss
+++ b/source/css/modules/_section-kontakt.scss
@@ -1,6 +1,7 @@
 .section-kontakt {
 	position: relative;
-	// background: lighten(#484848,10);
+	
+	
 	background:#926E4A url(../images/bg-kontakt_small.jpg) right center no-repeat;
 	background-size:cover;
 	@include mq($bp2){
@@ -14,65 +15,91 @@
 
 
 	.section-title {
-		background:#FBF7EC;
-		padding-bottom: 1.5em;
-		// border-top: 3px solid #926E4A;
+		background:#C0A283;
+		&:after {
+			border-top-color:#C0A283;
+		}
 	}
 }
 
-.section-kontakt-body {
-	position: relative;
-			&:after {
-			content:'';
-			position: absolute;
-			width: 0;
-			height: 0;
-			border-style: solid;
-			border-width: 10px 15px 0 15px;
-			border-color: #FBF7EC transparent transparent transparent;
-			top:0;
-			left:50%;
-			margin-left: -15px;
-		}
-}
+
 
 .section-kontakt-text {
-	padding:3em 0 6em;
+	padding:3em 0;
 	position: relative;
 
-	@include mq($bp1){
+	@include mq($bp2){
 		width: 75%;
 	}
 	@include mq($bp3){
-		padding-top: 6em;
+		// padding-top: 6em;
 	}
 	@include mq($bp4){
 		width: 50%;
 	}
 	@include mq($bp5){
-		padding:8em 2em;
+		padding:5em 2em 2em;
 	}
 	p {
 		color:#fff;
-		font-size:16px;
+		color:rgba(#fff,.90);
+		margin-bottom: 0.5em;
+	}
+	p:first-child {
+		font-size:18px;
+		margin-bottom: 2em;
+		// font-weight: 700;
 		@include mq($bp4){
-			font-size:18px;
+			font-size:22px;
 		}
 	}
 }
 
 .kontakt-list {
 	color:#fff;
-	list-style: disc;
-	margin-bottom: 1em;
-	padding-left: 1em;
+	
+	// list-style: disc;
+	margin-bottom: 3em;
+	// padding-left: 1em;
+	li {
+		position: relative;	
+		padding-left: 1em;
+		margin-bottom: .5em;
+		&:before{
+			content:'';
+			position: absolute;
+			left: 0;
+			top: 10px;
+			width: 5px;
+			height: 5px;		
+			background:$text-color;
+			border-radius:500px;	
+			border-radius:50%;
+		}
+	}
+	
+		
 }
 
 .kontakt-by {
-	margin-top: 3em;
+	background:rgba(#000,.2);
+	// background:#8B6743;
+	// margin-top: 3em;
+
+	padding-top: 2em;
+	padding-bottom: 2em;
+	// text-align: center;
 	li {
-		margin-bottom: 1em;
+		
 		color:#fff;
+		display: inline-block;
+		&:first-child {
+			margin-right: 5em;
+			margin-bottom: 1em;
+			@include mq($bp2){
+				margin-bottom: 0;
+			}
+		}
 		a:hover {
 			opacity:.7;
 		}
@@ -84,5 +111,19 @@
 		display: inline-block;
 		vertical-align: middle;
 		margin-right: 1em;
+	}
+}
+
+.section-kontakt-text .sign {
+	font-family: $alt-font-family;
+	font-weight: 700;
+	font-size:18px;
+	padding-top: .5em;
+	
+	color:$text-color;
+	display: inline-block;
+	border-top: 1px solid $text-color;
+	@include mq($bp3){
+		padding-right: 5em;
 	}
 }
