--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -27,8 +27,13 @@
     <script>
     head.js("javascripts/modernizr.custom.js","//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js", "javascripts/all.js");
     </script>
+    <script>
+      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+      e.src='//www.google-analytics.com/analytics.js';
+      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+      ga('create','UA-43734506-3', 'milush.pl');ga('send','pageview');
+    </script>
 
-  <!--  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <%= javascript_include_tag 'all' %> -->
   </body>
 </html>
