--- a/source/partials/components/_04-help-section.erb
+++ b/source/partials/components/_04-help-section.erb
@@ -1,11 +1,13 @@
 <section id="section-help" class="section section-help">
-	<div class="ct">
-		<div class="section-title">
+	
+	<div class="section-title">
+		<div class="ct">
 			<h3>Komu mogę pomóc?</h3>
 			<span>czyli</span>
 			<p>Kto może skorzystać z moich usług?</p>
-		</div>
-
+		</div>	
+	</div>
+	<div class="ct">
 		<div class="section-body">
 			<div class="tabs-wrap tabs-wrap--pomoc" data-effeckt-type='slide-up'>		   
 			    <ul class="tabs tabs--pomoc">
@@ -35,7 +37,7 @@ Agencje interaktywne</h4>
 			      <a class="tab-drawer-heading" href="#tab-3">Web designerzy</a>
 			      <div id="tab-3" class="tab-content tab-content--pomoc">
 			        <h4>Web designerzy</h4>
-				    <p>Nareszcie! Skończyłeś projekt strony www i dumny z design`u będziesz prezentował ją klientowi. Czas również poprosić klienta o tekst na stronę. I wtedy słyszysz: „tekst jeszcze nie jest gotowy”, „ja myślałem, że to pan napisze…” itd. Czasem jest też tak, że dostarczona treść nie współgra z Twoim projektem.</p>
+				    <p>Nareszcie! Skończyłeś projekt strony www i dumny z design`u będziesz prezentował ją klientowi. Czas również poprosić klienta o tekst na stronę. I&nbsp;wtedy słyszysz: „tekst jeszcze nie jest gotowy”, „ja myślałem, że to pan napisze…” itd. Czasem jest też tak, że dostarczona treść nie współgra z Twoim projektem.</p>
 				    <p>Wybrnij z tego szybko – zaproponuj klientowi moje usługi copywriterskie. Napiszę tekst idealnie dopasowany zarówno do Twojego projektu, jak i wymagań klienta.</p> 
 				    <p>Dzięki współpracy ze mną wyróżnisz się w branży, oferując kompleksową usługę tworzenia stron internetowych wraz z treścią.</p>
 			      </div>
