--- a/source/partials/components/_06-services-klienci.erb
+++ b/source/partials/components/_06-services-klienci.erb
@@ -1,10 +1,13 @@
 <section id="section-klienci" class="section-klienci">
-	<div class="ct">
+	
 		<div class="section-title">
+			<div class="ct">
 				<h3>Klienci</h3>
 				<span>czyli</span>
 				<p>Z kim współpracowałam do tej pory?</p>
+			</div>	
 		</div>
+	<div class="ct">	
 		<ul class="clients">
 			<li><span class="icon-clients icon-allevo"></span></li><!--
 			--><li><span class="icon-clients icon-floslek"></span></li><!--
